--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "QGameTheory"]
+	path = QGameTheory
+	url = https://github.com/indrag49/qgametheory
+	shallow = true
+	registered = true
